cmake_minimum_required(VERSION 3.19)
project(abc212)

set(CMAKE_CXX_STANDARD 17)

add_executable(abc212a a.cpp)
add_executable(abc212b b.cpp)
add_executable(abc212c c.cpp)
add_executable(abc212d d.cpp)
add_executable(abc212e e.cpp)
add_executable(abc212f f.cpp)
add_executable(abc212g g.cpp)
add_executable(abc212h h.cpp)
