cmake_minimum_required(VERSION 3.19)
project(abc214)

set(CMAKE_CXX_STANDARD 17)

add_executable(abc214a a.cpp)
add_executable(abc214b b.cpp)
add_executable(abc214c c.cpp)
add_executable(abc214d d.cpp)
add_executable(abc214e e.cpp)
add_executable(abc214f f.cpp)
add_executable(abc214g g.cpp)
add_executable(abc214h h.cpp)