cmake_minimum_required(VERSION 3.19)
project(abc216)

set(CMAKE_CXX_STANDARD 17)

add_executable(abc216a a.cpp)
add_executable(abc216b b.cpp)
add_executable(abc216c c.cpp)
add_executable(abc216d d.cpp)
add_executable(abc216e e.cpp)
add_executable(abc216f f.cpp)
add_executable(abc216g g.cpp)
add_executable(abc216h h.cpp)