cmake_minimum_required(VERSION 3.19)
project(typical90)

set(CMAKE_CXX_STANDARD 17)

add_executable(typical9001 01.cpp)
add_executable(typical9002 02.cpp)
add_executable(typical9003 03.cpp)
add_executable(typical9004 04.cpp)

add_executable(typical9006 06.cpp)
add_executable(typical9007 07.cpp)
add_executable(typical9008 08.cpp)
add_executable(typical9009 09.cpp)
add_executable(typical9010 10.cpp)