cmake_minimum_required(VERSION 3.19)
project(typical90)

set(CMAKE_CXX_STANDARD 17)

add_executable(typical9001 01.cpp)
add_executable(typical9002 02.cpp)
add_executable(typical9003 03.cpp)
add_executable(typical9004 04.cpp)

add_executable(typical9006 06.cpp)
add_executable(typical9007 07.cpp)
add_executable(typical9008 08.cpp)
add_executable(typical9009 09.cpp)
add_executable(typical9010 10.cpp)
add_executable(typical9011 11.cpp)
add_executable(typical9012 12.cpp)
add_executable(typical9013 13.cpp)
add_executable(typical9014 14.cpp)
add_executable(typical9015 15.cpp)
add_executable(typical9016 16.cpp)

add_executable(typical9018 18.cpp)
add_executable(typical9019 19.cpp)
add_executable(typical9020 20.cpp)
add_executable(typical9021 21.cpp)
add_executable(typical9022 22.cpp)

add_executable(typical9024 24.cpp)

add_executable(typical9026 26.cpp)
add_executable(typical9027 27.cpp)
add_executable(typical9028 28.cpp)
add_executable(typical9029 29.cpp)
add_executable(typical9030 30.cpp)

add_executable(typical9032 32.cpp)