cmake_minimum_required(VERSION 3.19)
project(typical90)

set(CMAKE_CXX_STANDARD 17)

add_executable(typical9001 01.cpp)
add_executable(typical9002 02.cpp)
add_executable(typical9003 03.cpp)
add_executable(typical9004 04.cpp)

add_executable(typical9006 06.cpp)
add_executable(typical9007 07.cpp)
add_executable(typical9008 08.cpp)
add_executable(typical9009 09.cpp)
add_executable(typical9010 10.cpp)
add_executable(typical9011 11.cpp)
add_executable(typical9012 12.cpp)
add_executable(typical9013 13.cpp)
add_executable(typical9014 14.cpp)
add_executable(typical9015 15.cpp)
add_executable(typical9016 16.cpp)

add_executable(typical9018 18.cpp)
add_executable(typical9019 19.cpp)
add_executable(typical9020 20.cpp)
add_executable(typical9021 21.cpp)
add_executable(typical9022 22.cpp)

add_executable(typical9024 24.cpp)

add_executable(typical9026 26.cpp)
add_executable(typical9027 27.cpp)
add_executable(typical9028 28.cpp)
add_executable(typical9029 29.cpp)
add_executable(typical9030 30.cpp)

add_executable(typical9032 32.cpp)
add_executable(typical9033 33.cpp)
add_executable(typical9034 34.cpp)

add_executable(typical9036 36.cpp)
add_executable(typical9037 37.cpp)
add_executable(typical9038 38.cpp)
add_executable(typical9039 39.cpp)


add_executable(typical9042 42.cpp)
add_executable(typical9043 43.cpp)
add_executable(typical9044 44.cpp)

add_executable(typical9046 46.cpp)

add_executable(typical9048 48.cpp)

add_executable(typical9050 50.cpp)
add_executable(typical9051 51.cpp)
add_executable(typical9052 52.cpp)

add_executable(typical9054 54.cpp)
add_executable(typical9055 55.cpp)
add_executable(typical9056 56.cpp)

add_executable(typical9058 58.cpp)

add_executable(typical9060 60.cpp)
add_executable(typical9061 61.cpp)

add_executable(typical9063 63.cpp)
add_executable(typical9064 64.cpp)

add_executable(typical9066 66.cpp)
add_executable(typical9067 67.cpp)

add_executable(typical9069 69.cpp)
add_executable(typical9070 70.cpp)